<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inside_subject">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_1_ek1_shape">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/subjectNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:gravity="center"
                        android:background="@color/white"
                        android:textColor="@color/black"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="32dp"
                        android:textSize="30sp"
                        android:layout_marginTop="15dp"
                        />
                    <Button
                        android:id="@+id/announcementButton"
                        android:layout_marginTop="80dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/announcement"
                        android:textStyle="bold"
                        android:background="@color/white"
                        android:textAlignment="center"
                        android:padding="18dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:onClick="AnnouncementPage"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/notesButton"
                        android:layout_marginTop="80dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notes"
                        android:textStyle="bold"
                        android:background="@color/white"
                        android:textAlignment="center"
                        android:padding="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/announcementButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        android:onClick="notesPage"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/vrecsButton"
                        android:layout_marginTop="80dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/class_lecture_recordings"
                        android:textStyle="bold"
                        android:background="@color/white"
                        android:textAlignment="center"
                        android:padding="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/notesButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        android:onClick="recsPage"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/examButton"
                        android:layout_marginTop="80dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exam"
                        android:textStyle="bold"
                        android:background="@color/white"
                        android:textAlignment="center"
                        android:padding="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/vrecsButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        android:onClick="examPage"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/grpchatButton"
                        android:layout_marginTop="80dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ask_a_doubt"
                        android:textStyle="bold"
                        android:background="@color/white"
                        android:textAlignment="center"
                        android:padding="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/examButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        android:onClick="grpChatPage"
                        android:gravity="center"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>